pml_grammar/pmlParser.py
# Generated from pml.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class pmlParser ( Parser ):

    grammarFileName = "pml.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@name'", "'symmetry'", "'use'", "'faces'", 
                     "'sharpEdges'", "'attr'", "'random_normal'", "'random_weighted'", 
                     "'if'", "'use_from'", "'per_building'", "'item'", "'.'", 
                     "'or'", "'and'", "'not'", "'in'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'@'", "'{'", 
                     "'}'", "'('", "')'", "'['", "']'", "'|'", "','", "':'", 
                     "';'", "'+'", "'-'", "'*'", "'/'", "'>'", "'>='", "'<'", 
                     "'<='", "'=='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "OR", "AND", "NOT", "IN", 
                      "IDENTIFIER", "STRING_LITERAL", "NUMBER", "FLOAT", 
                      "INT", "STRUDEL", "LCURLY", "RCURLY", "LPAREN", "RPAREN", 
                      "LBRACK", "RBRACK", "PIPE", "COMMA", "COLON", "SEMI", 
                      "PLUS", "MINUS", "TIMES", "DIV", "GT", "GE", "LT", 
                      "LE", "EQ", "COMMENT", "WS" ]

    RULE_styles = 0
    RULE_named_block = 1
    RULE_elements = 2
    RULE_element = 3
    RULE_attributes = 4
    RULE_attribute = 5
    RULE_sym_expression = 6
    RULE_use_expression = 7
    RULE_smooth_expression = 8
    RULE_markup_block = 9
    RULE_expression = 10
    RULE_alternatives = 11
    RULE_function = 12
    RULE_nested_list = 13
    RULE_def_name = 14
    RULE_conditional = 15
    RULE_condition = 16
    RULE_bool_expr = 17
    RULE_cmp_expr = 18
    RULE_in_expr = 19
    RULE_arith_expr = 20
    RULE_arith_atom = 21
    RULE_ari_lparen = 22
    RULE_ari_rparen = 23
    RULE_const_atom = 24
    RULE_constant = 25
    RULE_simple_expr = 26
    RULE_element_name = 27
    RULE_attr_name = 28
    RULE_identifier = 29
    RULE_relop = 30
    RULE_logicop = 31
    RULE_notop = 32
    RULE_inop = 33
    RULE_arith_op = 34
    RULE_number = 35
    RULE_string_literal = 36

    ruleNames =  [ "styles", "named_block", "elements", "element", "attributes", 
                   "attribute", "sym_expression", "use_expression", "smooth_expression", 
                   "markup_block", "expression", "alternatives", "function", 
                   "nested_list", "def_name", "conditional", "condition", 
                   "bool_expr", "cmp_expr", "in_expr", "arith_expr", "arith_atom", 
                   "ari_lparen", "ari_rparen", "const_atom", "constant", 
                   "simple_expr", "element_name", "attr_name", "identifier", 
                   "relop", "logicop", "notop", "inop", "arith_op", "number", 
                   "string_literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    OR=14
    AND=15
    NOT=16
    IN=17
    IDENTIFIER=18
    STRING_LITERAL=19
    NUMBER=20
    FLOAT=21
    INT=22
    STRUDEL=23
    LCURLY=24
    RCURLY=25
    LPAREN=26
    RPAREN=27
    LBRACK=28
    RBRACK=29
    PIPE=30
    COMMA=31
    COLON=32
    SEMI=33
    PLUS=34
    MINUS=35
    TIMES=36
    DIV=37
    GT=38
    GE=39
    LT=40
    LE=41
    EQ=42
    COMMENT=43
    WS=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StylesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pmlParser.RULE_styles

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NAMEDContext(StylesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pmlParser.StylesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(pmlParser.EOF, 0)
        def named_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pmlParser.Named_blockContext)
            else:
                return self.getTypedRuleContext(pmlParser.Named_blockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNAMED" ):
                listener.enterNAMED(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNAMED" ):
                listener.exitNAMED(self)


    class UNNAMEDContext(StylesContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pmlParser.StylesContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def elements(self):
            return self.getTypedRuleContext(pmlParser.ElementsContext,0)

        def EOF(self):
            return self.getToken(pmlParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUNNAMED" ):
                listener.enterUNNAMED(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUNNAMED" ):
                listener.exitUNNAMED(self)



    def styles(self):

        localctx = pmlParser.StylesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_styles)
        self._la = 0 # Token type
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [pmlParser.T__0]:
                localctx = pmlParser.NAMEDContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 75 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 74
                    self.named_block()
                    self.state = 77 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==pmlParser.T__0):
                        break

                self.state = 79
                self.match(pmlParser.EOF)
                pass
            elif token in [pmlParser.IDENTIFIER, pmlParser.STRUDEL]:
                localctx = pmlParser.UNNAMEDContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.elements()
                self.state = 82
                self.match(pmlParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Named_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(pmlParser.STRING_LITERAL, 0)

        def SEMI(self):
            return self.getToken(pmlParser.SEMI, 0)

        def elements(self):
            return self.getTypedRuleContext(pmlParser.ElementsContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_named_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamed_block" ):
                listener.enterNamed_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamed_block" ):
                listener.exitNamed_block(self)




    def named_block(self):

        localctx = pmlParser.Named_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_named_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(pmlParser.T__0)
            self.state = 87
            self.match(pmlParser.STRING_LITERAL)
            self.state = 88
            self.match(pmlParser.SEMI)
            self.state = 89
            self.elements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pmlParser.ElementContext)
            else:
                return self.getTypedRuleContext(pmlParser.ElementContext,i)


        def getRuleIndex(self):
            return pmlParser.RULE_elements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElements" ):
                listener.enterElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElements" ):
                listener.exitElements(self)




    def elements(self):

        localctx = pmlParser.ElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_elements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.element()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pmlParser.IDENTIFIER or _la==pmlParser.STRUDEL:
                self.state = 92
                self.element()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element_name(self):
            return self.getTypedRuleContext(pmlParser.Element_nameContext,0)


        def LCURLY(self):
            return self.getToken(pmlParser.LCURLY, 0)

        def attributes(self):
            return self.getTypedRuleContext(pmlParser.AttributesContext,0)


        def RCURLY(self):
            return self.getToken(pmlParser.RCURLY, 0)

        def STRUDEL(self, i:int=None):
            if i is None:
                return self.getTokens(pmlParser.STRUDEL)
            else:
                return self.getToken(pmlParser.STRUDEL, i)

        def def_name(self):
            return self.getTypedRuleContext(pmlParser.Def_nameContext,0)


        def LBRACK(self):
            return self.getToken(pmlParser.LBRACK, 0)

        def condition(self):
            return self.getTypedRuleContext(pmlParser.ConditionContext,0)


        def RBRACK(self):
            return self.getToken(pmlParser.RBRACK, 0)

        def getRuleIndex(self):
            return pmlParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = pmlParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pmlParser.STRUDEL:
                self.state = 98
                self.match(pmlParser.STRUDEL)


            self.state = 101
            self.element_name()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pmlParser.STRUDEL:
                self.state = 102
                self.match(pmlParser.STRUDEL)
                self.state = 103
                self.def_name()


            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==pmlParser.LBRACK:
                self.state = 106
                self.match(pmlParser.LBRACK)
                self.state = 107
                self.condition()
                self.state = 108
                self.match(pmlParser.RBRACK)


            self.state = 112
            self.match(pmlParser.LCURLY)
            self.state = 113
            self.attributes()
            self.state = 114
            self.match(pmlParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pmlParser.AttributeContext)
            else:
                return self.getTypedRuleContext(pmlParser.AttributeContext,i)


        def getRuleIndex(self):
            return pmlParser.RULE_attributes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributes" ):
                listener.enterAttributes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributes" ):
                listener.exitAttributes(self)




    def attributes(self):

        localctx = pmlParser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pmlParser.T__1) | (1 << pmlParser.T__2) | (1 << pmlParser.T__3) | (1 << pmlParser.T__4) | (1 << pmlParser.IDENTIFIER))) != 0):
                self.state = 116
                self.attribute()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(pmlParser.COLON, 0)

        def sym_expression(self):
            return self.getTypedRuleContext(pmlParser.Sym_expressionContext,0)


        def SEMI(self):
            return self.getToken(pmlParser.SEMI, 0)

        def use_expression(self):
            return self.getTypedRuleContext(pmlParser.Use_expressionContext,0)


        def smooth_expression(self):
            return self.getTypedRuleContext(pmlParser.Smooth_expressionContext,0)


        def attr_name(self):
            return self.getTypedRuleContext(pmlParser.Attr_nameContext,0)


        def expression(self):
            return self.getTypedRuleContext(pmlParser.ExpressionContext,0)


        def markup_block(self):
            return self.getTypedRuleContext(pmlParser.Markup_blockContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)




    def attribute(self):

        localctx = pmlParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(pmlParser.T__1)
                self.state = 123
                self.match(pmlParser.COLON)
                self.state = 124
                self.sym_expression()
                self.state = 125
                self.match(pmlParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(pmlParser.T__2)
                self.state = 128
                self.match(pmlParser.COLON)
                self.state = 129
                self.use_expression()
                self.state = 130
                self.match(pmlParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 132
                _la = self._input.LA(1)
                if not(_la==pmlParser.T__3 or _la==pmlParser.T__4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 133
                self.match(pmlParser.COLON)
                self.state = 134
                self.smooth_expression()
                self.state = 135
                self.match(pmlParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.attr_name()
                self.state = 138
                self.match(pmlParser.COLON)
                self.state = 139
                self.expression()
                self.state = 140
                self.match(pmlParser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.attr_name()
                self.state = 143
                self.match(pmlParser.COLON)
                self.state = 144
                self.markup_block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sym_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(pmlParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return pmlParser.RULE_sym_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSym_expression" ):
                listener.enterSym_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSym_expression" ):
                listener.exitSym_expression(self)




    def sym_expression(self):

        localctx = pmlParser.Sym_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_sym_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(pmlParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Use_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(pmlParser.IDENTIFIER)
            else:
                return self.getToken(pmlParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pmlParser.COMMA)
            else:
                return self.getToken(pmlParser.COMMA, i)

        def getRuleIndex(self):
            return pmlParser.RULE_use_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUse_expression" ):
                listener.enterUse_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUse_expression" ):
                listener.exitUse_expression(self)




    def use_expression(self):

        localctx = pmlParser.Use_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_use_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(pmlParser.IDENTIFIER)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pmlParser.COMMA:
                self.state = 151
                self.match(pmlParser.COMMA)
                self.state = 152
                self.match(pmlParser.IDENTIFIER)
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Smooth_expressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(pmlParser.ExpressionContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_smooth_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmooth_expression" ):
                listener.enterSmooth_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmooth_expression" ):
                listener.exitSmooth_expression(self)




    def smooth_expression(self):

        localctx = pmlParser.Smooth_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_smooth_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Markup_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(pmlParser.LBRACK, 0)

        def elements(self):
            return self.getTypedRuleContext(pmlParser.ElementsContext,0)


        def RBRACK(self):
            return self.getToken(pmlParser.RBRACK, 0)

        def getRuleIndex(self):
            return pmlParser.RULE_markup_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMarkup_block" ):
                listener.enterMarkup_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMarkup_block" ):
                listener.exitMarkup_block(self)




    def markup_block(self):

        localctx = pmlParser.Markup_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_markup_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(pmlParser.LBRACK)
            self.state = 161
            self.elements()
            self.state = 162
            self.match(pmlParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_expr(self):
            return self.getTypedRuleContext(pmlParser.Simple_exprContext,0)


        def function(self):
            return self.getTypedRuleContext(pmlParser.FunctionContext,0)


        def alternatives(self):
            return self.getTypedRuleContext(pmlParser.AlternativesContext,0)


        def getRuleIndex(self):
            return pmlParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = pmlParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.simple_expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.function()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.alternatives()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternativesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pmlParser.FunctionContext)
            else:
                return self.getTypedRuleContext(pmlParser.FunctionContext,i)


        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(pmlParser.PIPE)
            else:
                return self.getToken(pmlParser.PIPE, i)

        def getRuleIndex(self):
            return pmlParser.RULE_alternatives

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlternatives" ):
                listener.enterAlternatives(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlternatives" ):
                listener.exitAlternatives(self)




    def alternatives(self):

        localctx = pmlParser.AlternativesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_alternatives)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.function()
            self.state = 172 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 170
                self.match(pmlParser.PIPE)
                self.state = 171
                self.function()
                self.state = 174 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==pmlParser.PIPE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pmlParser.RULE_function

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RANDWContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pmlParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def nested_list(self):
            return self.getTypedRuleContext(pmlParser.Nested_listContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRANDW" ):
                listener.enterRANDW(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRANDW" ):
                listener.exitRANDW(self)


    class USEFROMContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pmlParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(pmlParser.LPAREN, 0)
        def IDENTIFIER(self):
            return self.getToken(pmlParser.IDENTIFIER, 0)
        def RPAREN(self):
            return self.getToken(pmlParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUSEFROM" ):
                listener.enterUSEFROM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUSEFROM" ):
                listener.exitUSEFROM(self)


    class PERBUILDContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pmlParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(pmlParser.LPAREN, 0)
        def function(self):
            return self.getTypedRuleContext(pmlParser.FunctionContext,0)

        def RPAREN(self):
            return self.getToken(pmlParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPERBUILD" ):
                listener.enterPERBUILD(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPERBUILD" ):
                listener.exitPERBUILD(self)


    class CONSTContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pmlParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def constant(self):
            return self.getTypedRuleContext(pmlParser.ConstantContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCONST" ):
                listener.enterCONST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCONST" ):
                listener.exitCONST(self)

